# secure-auth-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  auth.db  send-file.sh  setup-pq.sh  test-pq.sh  test_admin_api.sh
.sqlx/: query-0cb8eb96050361d38a595f87810e9305339f727063fdc710f7617cae84911414.json  query-6c26af58e326fa9d0a81be29f7b53304111cbc728172e7c3845cfcd718da6e89.json  query-ed5e2fde0df50fa443facb8980ba8e06a0f3f522e3c7d047912ebe88ae43c50e.json  query-f55a1d41c3214799de114cf5cf30c4dac6b9897e2b1918672bd50d032c490e8e.json
docs/: encryption.typst  hashing.typst
migrations/: 20251112205632_add_is_verified_to_accounts.down.sql  20251112205632_add_is_verified_to_accounts.up.sql
migrations/files/: 20251211095011_create_files_tables.down.sql  20251211095011_create_files_tables.up.sql  20251212100000_add_third_party_support.down.sql  20251212100000_add_third_party_support.up.sql
scripts/: make_admin.sh  send-file.sh  setup-db.sh  setup-pq.sh  test-file.txt
src/: lib.rs  main.rs
src/crypto/: account.rs  cpr.rs  file_integrity.rs  mod.rs  pq_hybrid.rs  signing.rs  stream_cipher.rs  totp.rs
src/db/: auth.rs  files.rs  files_models.rs  files_repository.rs  mod.rs  models.rs  repository.rs
src/middleware/: auth.rs  cpr.rs  csrf.rs  mod.rs  rate_limit.rs
src/routes/: account.rs  admin.rs  admin_quarantine.rs  auth.rs  files.rs  mod.rs  pq_upload.rs
static/: admin.html  auth.html  files.html  index.html  login.html  signup.html  styles.css
static/css/: styles.css
static/js/: admin.js  files.js  utils.js
