[package]
name = "secure_auth_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = "0.8.6"
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"] }
uuid = { version = "1.11", features = ["v4", "fast-rng", "v7", "serde"] }
chrono = "0.4.39"
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
rand = "0.10.0-rc.5"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "io-util"] }
totp-rs = { version = "5.7.0", features = ["otpauth", "qr"] }
tower-http = { version = "0.6.6", features = ["fs"] }
base64 = "0.22.1"
tower_governor = "0.8.0"
time = "0.3.36"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zeroize = { version = "1.8.2", features = ["derive"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
blake3 = "1.8.2"
axum_typed_multipart = "0.16.4"
tempfile = "3.23.0"
mime_guess = "2.0.5"
mime = "0.3.17"
tokio-util = { version = "0.7.17", features = ["io"] }
futures = "0.3.31"
bytes = "1.11.0"

# Post-Quantum Cryptography
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Classical Cryptography (for hybrid KEM)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Symmetric Encryption (AEAD)
chacha20poly1305 = "0.10"

# Key Derivation
hkdf = "0.12"

# HTTP Client (for sender binary)
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json", "__rustls-ring"] }

# CLI argument parsing (for binaries)
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "sender"
path = "src/bin/sender.rs"
